--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "jest": "^24.9.0",
+    "knex-cleaner": "^1.3.0",
     "nodemon": "^1.19.4",
     "supertest": "^4.0.2"
   }
